exports[`prefer-diagnostic > invalid(1): import test from 'node:test';\ntest('t', t => {\n\tglobalThis.console.log('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	globalThis.console.log('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(1): import test from 'node:test';\ntest('t', t => {\n\tglobalThis.console.log('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	globalThis.console.log('x');
    | 	^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(10): import test from 'node:test';\ntest('t', t => {\n\t((console?.log))('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	((console?.log))('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(10): import test from 'node:test';\ntest('t', t => {\n\t((console?.log))('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	((console?.log))('value');
    | 	  ^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	((t.diagnostic))('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(11): import test from 'node:test';\ntest('t', t => {\n\t(console.log as any)('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console.log as any)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(11): import test from 'node:test';\ntest('t', t => {\n\t(console.log as any)('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console.log as any)('value');
    | 	 ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic as any)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(12): import test from 'node:test';\ntest('t', t => {\n\t(console as any).log('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console as any).log('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(12): import test from 'node:test';\ntest('t', t => {\n\t(console as any).log('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console as any).log('value');
    | 	^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(13): import test from 'node:test';\ntest('t', t => {\n\t(console?.log as any)('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console?.log as any)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(13): import test from 'node:test';\ntest('t', t => {\n\t(console?.log as any)('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console?.log as any)('value');
    | 	 ^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic as any)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(14): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(14): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log('value');
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(15): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(\`count: \${count}\`);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(\`count: \${count}\`);
  4 | });

`;

exports[`prefer-diagnostic > invalid(15): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(\`count: \${count}\`);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(\`count: \${count}\`);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic(\`count: \${count}\`);
  4 | });

`;

exports[`prefer-diagnostic > invalid(16): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('count: ' + count);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log('count: ' + count);
  4 | });

`;

exports[`prefer-diagnostic > invalid(16): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('count: ' + count);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log('count: ' + count);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('count: ' + count);
  4 | });

`;

exports[`prefer-diagnostic > invalid(17): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(count + ' items');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(count + ' items');
  4 | });

`;

exports[`prefer-diagnostic > invalid(17): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(count + ' items');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(count + ' items');
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic(count + ' items');
  4 | });

`;

exports[`prefer-diagnostic > invalid(18): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('a' + b + c);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log('a' + b + c);
  4 | });

`;

exports[`prefer-diagnostic > invalid(18): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('a' + b + c);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log('a' + b + c);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('a' + b + c);
  4 | });

`;

exports[`prefer-diagnostic > invalid(19): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(message);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(message);
  4 | });

`;

exports[`prefer-diagnostic > invalid(19): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(message);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(message);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(2): import test from 'node:test';\ntest('t', t => {\n\tglobal.console.log('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	global.console.log('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(2): import test from 'node:test';\ntest('t', t => {\n\tglobal.console.log('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	global.console.log('x');
    | 	^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(20): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(undefined);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(undefined);
  4 | });

`;

exports[`prefer-diagnostic > invalid(20): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(undefined);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(undefined);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(21): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(null);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(null);
  4 | });

`;

exports[`prefer-diagnostic > invalid(21): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(null);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(null);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(22): import test from 'node:test';\ntest('t', t => {\n\tconsole.log({a: 1});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log({a: 1});
  4 | });

`;

exports[`prefer-diagnostic > invalid(22): import test from 'node:test';\ntest('t', t => {\n\tconsole.log({a: 1});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log({a: 1});
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(23): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(42);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(42);
  4 | });

`;

exports[`prefer-diagnostic > invalid(23): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(42);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(42);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(24): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(a + b);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(a + b);
  4 | });

`;

exports[`prefer-diagnostic > invalid(24): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(a + b);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(a + b);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(25): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('value', value);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log('value', value);
  4 | });

`;

exports[`prefer-diagnostic > invalid(25): import test from 'node:test';\ntest('t', t => {\n\tconsole.log('value', value);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log('value', value);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(26): import test from 'node:test';\ntest('t', t => {\n\tconsole.log();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log();
  4 | });

`;

exports[`prefer-diagnostic > invalid(26): import test from 'node:test';\ntest('t', t => {\n\tconsole.log();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log();
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(27): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(...args);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.log(...args);
  4 | });

`;

exports[`prefer-diagnostic > invalid(27): import test from 'node:test';\ntest('t', t => {\n\tconsole.log(...args);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.log(...args);
    | 	^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(28): import test from 'node:test';\ntest('t', t => {\n\tconsole.info('info');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.info('info');
  4 | });

`;

exports[`prefer-diagnostic > invalid(28): import test from 'node:test';\ntest('t', t => {\n\tconsole.info('info');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.info('info');
    | 	^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.info()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('info');
  4 | });

`;

exports[`prefer-diagnostic > invalid(29): import test from 'node:test';\ntest('t', t => {\n\tconsole.debug('debug');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console.debug('debug');
  4 | });

`;

exports[`prefer-diagnostic > invalid(29): import test from 'node:test';\ntest('t', t => {\n\tconsole.debug('debug');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console.debug('debug');
    | 	^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.debug()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('debug');
  4 | });

`;

exports[`prefer-diagnostic > invalid(3): import test from 'node:test';\ntest('t', t => {\n\tglobalThis.console.info('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	globalThis.console.info('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(3): import test from 'node:test';\ntest('t', t => {\n\tglobalThis.console.info('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	globalThis.console.info('x');
    | 	^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.info()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(30): import test from 'node:test';\ntest('t', async t => { await t.test('s', s => { console.log('sub'); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', async t => { await t.test('s', s => { console.log('sub'); }); });

`;

exports[`prefer-diagnostic > invalid(30): import test from 'node:test';\ntest('t', async t => { await t.test('s', s => { console.log('sub'); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', async t => { await t.test('s', s => { console.log('sub'); }); });
    |                                                 ^^^^^^^^^^^ Prefer \`s.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`s.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', async t => { await t.test('s', s => { s.diagnostic('sub'); }); });

`;

exports[`prefer-diagnostic > invalid(31): import * as nodeTest from 'node:test';\nnodeTest.test('t', t => { console.log('value'); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('t', t => { console.log('value'); });

`;

exports[`prefer-diagnostic > invalid(31): import * as nodeTest from 'node:test';\nnodeTest.test('t', t => { console.log('value'); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test('t', t => { console.log('value'); });
    |                           ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('t', t => { t.diagnostic('value'); });

`;

exports[`prefer-diagnostic > invalid(32): import test from 'node:test';\ntest('t', t => {\n\t(console as Console).log('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console as Console).log('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(32): import test from 'node:test';\ntest('t', t => {\n\t(console as Console).log('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console as Console).log('x');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(33): import test from 'node:test';\ntest('t', t => {\n\tconsole!.log('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console!.log('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(33): import test from 'node:test';\ntest('t', t => {\n\tconsole!.log('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console!.log('x');
    | 	^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(34): import {test, getTestContext} from 'node:test';\ntest('t', () => { console.log('x'); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', () => { console.log('x'); });

`;

exports[`prefer-diagnostic > invalid(34): import {test, getTestContext} from 'node:test';\ntest('t', () => { console.log('x'); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('t', () => { console.log('x'); });
    |                   ^^^^^^^^^^^ Prefer \`getTestContext().diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`getTestContext().diagnostic()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', () => { getTestContext().diagnostic('x'); });

`;

exports[`prefer-diagnostic > invalid(35): import {test, getTestContext} from 'node:test';\ntest('t', t => { console.log('x'); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', t => { console.log('x'); });

`;

exports[`prefer-diagnostic > invalid(35): import {test, getTestContext} from 'node:test';\ntest('t', t => { console.log('x'); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('t', t => { console.log('x'); });
    |                  ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('t', t => { t.diagnostic('x'); });

`;

exports[`prefer-diagnostic > invalid(36): import {test, getTestContext as gtc} from 'node:test';\ntest('a', () => { console.log('x'); }); 1`] = `

  1 | import {test, getTestContext as gtc} from 'node:test';
  2 | test('a', () => { console.log('x'); });

`;

exports[`prefer-diagnostic > invalid(36): import {test, getTestContext as gtc} from 'node:test';\ntest('a', () => { console.log('x'); }); 2`] = `

Message:
  1 | import {test, getTestContext as gtc} from 'node:test';
> 2 | test('a', () => { console.log('x'); });
    |                   ^^^^^^^^^^^ Prefer \`gtc().diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`gtc().diagnostic()\`.:
  1 | import {test, getTestContext as gtc} from 'node:test';
  2 | test('a', () => { gtc().diagnostic('x'); });

`;

exports[`prefer-diagnostic > invalid(37): import {test} from 'node:test';\ntest('a', t => { function inner() { console.log('x'); } inner(); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', t => { function inner() { console.log('x'); } inner(); });

`;

exports[`prefer-diagnostic > invalid(37): import {test} from 'node:test';\ntest('a', t => { function inner() { console.log('x'); } inner(); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('a', t => { function inner() { console.log('x'); } inner(); });
    |                                     ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import {test} from 'node:test';
  2 | test('a', t => { function inner() { t.diagnostic('x'); } inner(); });

`;

exports[`prefer-diagnostic > invalid(38): import test from 'node:test';\ntest('t', t => {\n\t(globalThis as any).console.log('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(globalThis as any).console.log('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(38): import test from 'node:test';\ntest('t', t => {\n\t(globalThis as any).console.log('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(globalThis as any).console.log('x');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(39): import test from 'node:test';\ntest('t', t => {\n\tglobal!.console.log('x');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	global!.console.log('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(39): import test from 'node:test';\ntest('t', t => {\n\tglobal!.console.log('x');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	global!.console.log('x');
    | 	^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('x');
  4 | });

`;

exports[`prefer-diagnostic > invalid(4): import test from 'node:test';\ntest('t', t => {\n\tconsole./* keep me */log('hi');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console./* keep me */log('hi');
  4 | });

`;

exports[`prefer-diagnostic > invalid(4): import test from 'node:test';\ntest('t', t => {\n\tconsole./* keep me */log('hi');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console./* keep me */log('hi');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(40): import test from 'node:test';\nconst body = t => { console.log('x'); };\ntest('t', body); 1`] = `

  1 | import test from 'node:test';
  2 | const body = t => { console.log('x'); };
  3 | test('t', body);

`;

exports[`prefer-diagnostic > invalid(40): import test from 'node:test';\nconst body = t => { console.log('x'); };\ntest('t', body); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | const body = t => { console.log('x'); };
    |                     ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  3 | test('t', body);

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | const body = t => { t.diagnostic('x'); };
  3 | test('t', body);

`;

exports[`prefer-diagnostic > invalid(41): import test from 'node:test';\ntest('t', body);\nfunction body(context) { const report = () => console.log('x'); report(); } 1`] = `

  1 | import test from 'node:test';
  2 | test('t', body);
  3 | function body(context) { const report = () => console.log('x'); report(); }

`;

exports[`prefer-diagnostic > invalid(41): import test from 'node:test';\ntest('t', body);\nfunction body(context) { const report = () => console.log('x'); report(); } 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', body);
> 3 | function body(context) { const report = () => console.log('x'); report(); }
    |                                               ^^^^^^^^^^^ Prefer \`context.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`context.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', body);
  3 | function body(context) { const report = () => context.diagnostic('x'); report(); }

`;

exports[`prefer-diagnostic > invalid(42): import test from 'node:test';\nfunction body(context) { console.info('x'); }\ntest('t', t => { t.test('u', body); }); 1`] = `

  1 | import test from 'node:test';
  2 | function body(context) { console.info('x'); }
  3 | test('t', t => { t.test('u', body); });

`;

exports[`prefer-diagnostic > invalid(42): import test from 'node:test';\nfunction body(context) { console.info('x'); }\ntest('t', t => { t.test('u', body); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | function body(context) { console.info('x'); }
    |                          ^^^^^^^^^^^^ Prefer \`context.diagnostic()\` over \`console.info()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  3 | test('t', t => { t.test('u', body); });

Suggestion 1/1: Replace with \`context.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | function body(context) { context.diagnostic('x'); }
  3 | test('t', t => { t.test('u', body); });

`;

exports[`prefer-diagnostic > invalid(43): import test, {getTestContext} from 'node:test';\nfunction body() { console.log('x'); }\ntest('t', body); 1`] = `

  1 | import test, {getTestContext} from 'node:test';
  2 | function body() { console.log('x'); }
  3 | test('t', body);

`;

exports[`prefer-diagnostic > invalid(43): import test, {getTestContext} from 'node:test';\nfunction body() { console.log('x'); }\ntest('t', body); 2`] = `

Message:
  1 | import test, {getTestContext} from 'node:test';
> 2 | function body() { console.log('x'); }
    |                   ^^^^^^^^^^^ Prefer \`getTestContext().diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  3 | test('t', body);

Suggestion 1/1: Replace with \`getTestContext().diagnostic()\`.:
  1 | import test, {getTestContext} from 'node:test';
  2 | function body() { getTestContext().diagnostic('x'); }
  3 | test('t', body);

`;

exports[`prefer-diagnostic > invalid(44): import test from 'node:test';\ntest('x', t => {\n\tfunction body(s) { console.log('x'); }\n\tt.test('y', body);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('x', t => {
  3 | 	function body(s) { console.log('x'); }
  4 | 	t.test('y', body);
  5 | });

`;

exports[`prefer-diagnostic > invalid(44): import test from 'node:test';\ntest('x', t => {\n\tfunction body(s) { console.log('x'); }\n\tt.test('y', body);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('x', t => {
> 3 | 	function body(s) { console.log('x'); }
    | 	                   ^^^^^^^^^^^ Prefer \`s.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | 	t.test('y', body);
  5 | });

Suggestion 1/1: Replace with \`s.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('x', t => {
  3 | 	function body(s) { s.diagnostic('x'); }
  4 | 	t.test('y', body);
  5 | });

`;

exports[`prefer-diagnostic > invalid(45): import test from 'node:test';\ntest('o', async t => { t.beforeEach(t => { console.log('x'); }); await t.test('s', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('o', async t => { t.beforeEach(t => { console.log('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(45): import test from 'node:test';\ntest('o', async t => { t.beforeEach(t => { console.log('x'); }); await t.test('s', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('o', async t => { t.beforeEach(t => { console.log('x'); }); await t.test('s', () => {}); });
    |                                            ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('o', async t => { t.beforeEach(t => { t.diagnostic('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(46): import test from 'node:test';\ntest('o', async t => { t.afterEach(t => { console.log('x'); }); await t.test('s', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('o', async t => { t.afterEach(t => { console.log('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(46): import test from 'node:test';\ntest('o', async t => { t.afterEach(t => { console.log('x'); }); await t.test('s', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('o', async t => { t.afterEach(t => { console.log('x'); }); await t.test('s', () => {}); });
    |                                           ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('o', async t => { t.afterEach(t => { t.diagnostic('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(47): import test from 'node:test';\ntest('o', async t => { t.before(t => { console.log('x'); }); await t.test('s', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('o', async t => { t.before(t => { console.log('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(47): import test from 'node:test';\ntest('o', async t => { t.before(t => { console.log('x'); }); await t.test('s', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('o', async t => { t.before(t => { console.log('x'); }); await t.test('s', () => {}); });
    |                                        ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('o', async t => { t.before(t => { t.diagnostic('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(48): import test from 'node:test';\ntest('o', async t => { t.after(t => { console.log('x'); }); await t.test('s', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('o', async t => { t.after(t => { console.log('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(48): import test from 'node:test';\ntest('o', async t => { t.after(t => { console.log('x'); }); await t.test('s', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('o', async t => { t.after(t => { console.log('x'); }); await t.test('s', () => {}); });
    |                                       ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('o', async t => { t.after(t => { t.diagnostic('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(49): import test from 'node:test';\ntest('o', async t => { t.beforeEach(ctx => { console.log('x'); }); await t.test('s', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('o', async t => { t.beforeEach(ctx => { console.log('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(49): import test from 'node:test';\ntest('o', async t => { t.beforeEach(ctx => { console.log('x'); }); await t.test('s', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('o', async t => { t.beforeEach(ctx => { console.log('x'); }); await t.test('s', () => {}); });
    |                                              ^^^^^^^^^^^ Prefer \`ctx.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`ctx.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('o', async t => { t.beforeEach(ctx => { ctx.diagnostic('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(5): import test from 'node:test';\ntest('t', t => {\n\tconsole/* keep me */.log('hi');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console/* keep me */.log('hi');
  4 | });

`;

exports[`prefer-diagnostic > invalid(5): import test from 'node:test';\ntest('t', t => {\n\tconsole/* keep me */.log('hi');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console/* keep me */.log('hi');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

`;

exports[`prefer-diagnostic > invalid(50): import test from 'node:test';\nfunction body(t) { t.beforeEach(t => { console.log('x'); }); }\ntest('o', body); 1`] = `

  1 | import test from 'node:test';
  2 | function body(t) { t.beforeEach(t => { console.log('x'); }); }
  3 | test('o', body);

`;

exports[`prefer-diagnostic > invalid(50): import test from 'node:test';\nfunction body(t) { t.beforeEach(t => { console.log('x'); }); }\ntest('o', body); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | function body(t) { t.beforeEach(t => { console.log('x'); }); }
    |                                        ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  3 | test('o', body);

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | function body(t) { t.beforeEach(t => { t.diagnostic('x'); }); }
  3 | test('o', body);

`;

exports[`prefer-diagnostic > invalid(51): import test from 'node:test';\ntest('o', async t => { t.beforeEach(() => { console.log('x'); }); await t.test('s', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('o', async t => { t.beforeEach(() => { console.log('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(51): import test from 'node:test';\ntest('o', async t => { t.beforeEach(() => { console.log('x'); }); await t.test('s', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('o', async t => { t.beforeEach(() => { console.log('x'); }); await t.test('s', () => {}); });
    |                                             ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('o', async t => { t.beforeEach(() => { t.diagnostic('x'); }); await t.test('s', () => {}); });

`;

exports[`prefer-diagnostic > invalid(6): import test from 'node:test';\ntest('t', t => {\n\tconsole?.log('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	console?.log('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(6): import test from 'node:test';\ntest('t', t => {\n\tconsole?.log('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	console?.log('value');
    | 	^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	t.diagnostic('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(7): import test from 'node:test';\ntest('t', t => {\n\t(console.log)('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console.log)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(7): import test from 'node:test';\ntest('t', t => {\n\t(console.log)('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console.log)('value');
    | 	 ^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(8): import test from 'node:test';\ntest('t', t => {\n\t(console?.log)('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console?.log)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(8): import test from 'node:test';\ntest('t', t => {\n\t(console?.log)('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console?.log)('value');
    | 	 ^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic)('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(9): import test from 'node:test';\ntest('t', t => {\n\t(console?.log)?.('value');\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(console?.log)?.('value');
  4 | });

`;

exports[`prefer-diagnostic > invalid(9): import test from 'node:test';\ntest('t', t => {\n\t(console?.log)?.('value');\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('t', t => {
> 3 | 	(console?.log)?.('value');
    | 	 ^^^^^^^^^^^^ Prefer \`t.diagnostic()\` over \`console.log()\` inside a test, so the message is attached to the test as a TAP diagnostic.
  4 | });

Suggestion 1/1: Replace with \`t.diagnostic()\`.:
  1 | import test from 'node:test';
  2 | test('t', t => {
  3 | 	(t.diagnostic)?.('value');
  4 | });

`;
